add constant to model

--- a/market_model/hypothesis_test_linear_model.ipynb
+++ b/market_model/hypothesis_test_linear_model.ipynb
@@ -78,7 +78,8 @@
     "output_var = ['y']\n",
     "\n",
     "input_data = df[input_vars]\n",
-    "output_data = df[output_var]"
+    "output_data = df[output_var]\n",
+    "output_data = sm.add_constant(output_data)"
    ]
   },
   {
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +258,7 @@
        "max         0.402621     0.058177      0.058372    1.047816  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,120 +280,21 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table class=\"simpletable\">\n",
-       "<caption>OLS Regression Results</caption>\n",
-       "<tr>\n",
-       "  <th>Dep. Variable:</th>            <td>y</td>        <th>  R-squared:         </th> <td>   0.551</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.547</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   131.6</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Date:</th>             <td>Mon, 21 Sep 2020</td> <th>  Prob (F-statistic):</th> <td>2.00e-108</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Time:</th>                 <td>09:52:40</td>     <th>  Log-Likelihood:    </th> <td>  2139.1</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>No. Observations:</th>      <td>   651</td>      <th>  AIC:               </th> <td>  -4264.</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Df Residuals:</th>          <td>   644</td>      <th>  BIC:               </th> <td>  -4233.</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Df Model:</th>              <td>     6</td>      <th>                     </th>     <td> </td>    \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>    \n",
-       "</tr>\n",
-       "</table>\n",
-       "<table class=\"simpletable\">\n",
-       "<tr>\n",
-       "        <td></td>           <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>p</th>             <td>    0.9977</td> <td>    0.001</td> <td> 1005.002</td> <td> 0.000</td> <td>    0.996</td> <td>    1.000</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>e_hat</th>         <td>    0.6923</td> <td>    0.103</td> <td>    6.693</td> <td> 0.000</td> <td>    0.489</td> <td>    0.895</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>e_star</th>        <td>   -0.3811</td> <td>    0.124</td> <td>   -3.067</td> <td> 0.002</td> <td>   -0.625</td> <td>   -0.137</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>cumsum_e_hat</th>  <td>    0.0841</td> <td>    0.021</td> <td>    3.973</td> <td> 0.000</td> <td>    0.043</td> <td>    0.126</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>cumsum_e_star</th> <td>    0.0032</td> <td>    0.001</td> <td>    3.879</td> <td> 0.000</td> <td>    0.002</td> <td>    0.005</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>delta_e_hat</th>   <td>   -0.3155</td> <td>    0.234</td> <td>   -1.349</td> <td> 0.178</td> <td>   -0.775</td> <td>    0.144</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>delta_e_star</th>  <td>    0.4858</td> <td>    0.245</td> <td>    1.981</td> <td> 0.048</td> <td>    0.004</td> <td>    0.967</td>\n",
-       "</tr>\n",
-       "</table>\n",
-       "<table class=\"simpletable\">\n",
-       "<tr>\n",
-       "  <th>Omnibus:</th>       <td>81.285</td> <th>  Durbin-Watson:     </th> <td>   2.029</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Prob(Omnibus):</th> <td> 0.000</td> <th>  Jarque-Bera (JB):  </th> <td> 459.796</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Skew:</th>          <td>-0.373</td> <th>  Prob(JB):          </th> <td>1.43e-100</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Kurtosis:</th>      <td> 7.049</td> <th>  Cond. No.          </th> <td>1.12e+03</td> \n",
-       "</tr>\n",
-       "</table><br/><br/>Notes:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The condition number is large, 1.12e+03. This might indicate that there are<br/>strong multicollinearity or other numerical problems."
-      ],
-      "text/plain": [
-       "<class 'statsmodels.iolib.summary.Summary'>\n",
-       "\"\"\"\n",
-       "                            OLS Regression Results                            \n",
-       "==============================================================================\n",
-       "Dep. Variable:                      y   R-squared:                       0.551\n",
-       "Model:                            OLS   Adj. R-squared:                  0.547\n",
-       "Method:                 Least Squares   F-statistic:                     131.6\n",
-       "Date:                Mon, 21 Sep 2020   Prob (F-statistic):          2.00e-108\n",
-       "Time:                        09:52:40   Log-Likelihood:                 2139.1\n",
-       "No. Observations:                 651   AIC:                            -4264.\n",
-       "Df Residuals:                     644   BIC:                            -4233.\n",
-       "Df Model:                           6                                         \n",
-       "Covariance Type:            nonrobust                                         \n",
-       "=================================================================================\n",
-       "                    coef    std err          t      P>|t|      [0.025      0.975]\n",
-       "---------------------------------------------------------------------------------\n",
-       "p                 0.9977      0.001   1005.002      0.000       0.996       1.000\n",
-       "e_hat             0.6923      0.103      6.693      0.000       0.489       0.895\n",
-       "e_star           -0.3811      0.124     -3.067      0.002      -0.625      -0.137\n",
-       "cumsum_e_hat      0.0841      0.021      3.973      0.000       0.043       0.126\n",
-       "cumsum_e_star     0.0032      0.001      3.879      0.000       0.002       0.005\n",
-       "delta_e_hat      -0.3155      0.234     -1.349      0.178      -0.775       0.144\n",
-       "delta_e_star      0.4858      0.245      1.981      0.048       0.004       0.967\n",
-       "==============================================================================\n",
-       "Omnibus:                       81.285   Durbin-Watson:                   2.029\n",
-       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              459.796\n",
-       "Skew:                          -0.373   Prob(JB):                    1.43e-100\n",
-       "Kurtosis:                       7.049   Cond. No.                     1.12e+03\n",
-       "==============================================================================\n",
-       "\n",
-       "Notes:\n",
-       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-       "[2] The condition number is large, 1.12e+03. This might indicate that there are\n",
-       "strong multicollinearity or other numerical problems.\n",
-       "\"\"\""
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "shapes (651,2) and (651,2) not aligned: 2 (dim 1) != 651 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-712cf0e24091>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mols_model\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mOLS\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mols_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mresults\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\.conda\\envs\\rai\\lib\\site-packages\\statsmodels\\regression\\linear_model.py\u001b[0m in \u001b[0;36msummary\u001b[1;34m(self, yname, xname, title, alpha)\u001b[0m\n\u001b[0;32m   2638\u001b[0m         \u001b[0mrsquared_type\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m''\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mk_constant\u001b[0m \u001b[1;32melse\u001b[0m \u001b[1;34m' (uncentered)'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2639\u001b[0m         top_right = [('R-squared' + rsquared_type + ':',\n\u001b[1;32m-> 2640\u001b[1;33m                       [\"%#8.3f\" % self.rsquared]),\n\u001b[0m\u001b[0;32m   2641\u001b[0m                      ('Adj. R-squared' + rsquared_type + ':',\n\u001b[0;32m   2642\u001b[0m                       [\"%#8.3f\" % self.rsquared_adj]),\n",
+      "\u001b[1;32mpandas\\_libs\\properties.pyx\u001b[0m in \u001b[0;36mpandas._libs.properties.CachedProperty.__get__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\.conda\\envs\\rai\\lib\\site-packages\\statsmodels\\regression\\linear_model.py\u001b[0m in \u001b[0;36mrsquared\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1713\u001b[0m         \"\"\"\n\u001b[0;32m   1714\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mk_constant\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1715\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[1;36m1\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mssr\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcentered_tss\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1716\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1717\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[1;36m1\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mssr\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0muncentered_tss\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\properties.pyx\u001b[0m in \u001b[0;36mpandas._libs.properties.CachedProperty.__get__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\.conda\\envs\\rai\\lib\\site-packages\\statsmodels\\regression\\linear_model.py\u001b[0m in \u001b[0;36mssr\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1654\u001b[0m         \u001b[1;34m\"\"\"Sum of squared (whitened) residuals.\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1655\u001b[0m         \u001b[0mwresid\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwresid\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1656\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwresid\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwresid\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1657\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1658\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mcache_readonly\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mdot\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: shapes (651,2) and (651,2) not aligned: 2 (dim 1) != 651 (dim 0)"
+     ]
     }
    ],
    "source": [
