--- a/market_model/appendix_iii_market_price_regression.ipynb
+++ b/market_model/appendix_iii_market_price_regression.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Appendix - Market Model Regression Hypothesis Test"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -16,9 +23,42 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pyparsing.py:3172: FutureWarning: Possible set intersection at position 3\n",
+      "  self.re = re.compile(self.reString)\n"
+     ]
+    }
+   ],
    "source": [
-    "df = pd.read_csv('market_price_autoregression_df.csv')"
+    "debt_market_df = pd.read_csv('debt_market_df.csv', index_col='date', parse_dates=True)\n",
+    "\n",
+    "# Load debt price model\n",
+    "import pickle\n",
+    "loaded_model = pickle.load(open('debt_price_estimator.pickle', 'rb'))\n",
+    "\n",
+    "features = ['beta', 'Q', 'v_1', 'v_2 + v_3', \n",
+    "            'rho_star', 'C_star',\n",
+    "            'D_1', 'u_1', 'u_2', 'u_3', 'u_2 + u_3', \n",
+    "            'D_2', 'w_1', 'w_2', 'w_3', 'w_2 + w_3',\n",
+    "            'D']\n",
+    "\n",
+    "data_to_predict = debt_market_df[features]\n",
+    "loaded_model_predictions = loaded_model.predict(data_to_predict)\n",
+    "\n",
+    "df = debt_market_df[['p', 'p_star']].copy()\n",
+    "df['p_hat'] = loaded_model_predictions\n",
+    "df['e_hat'] = df['p_hat'] - df['p']\n",
+    "df['e_star'] = df['p_star'] - df['p']\n",
+    "df['cumsum_e_hat'] = df['e_hat'].cumsum()\n",
+    "df['cumsum_e_star'] = df['e_star'].cumsum()\n",
+    "df['delta_e_hat'] = df['e_hat'].diff().fillna(df['e_hat'])\n",
+    "df['delta_e_star'] = df['e_star'].diff().fillna(df['e_star'])\n",
+    "df['y'] = df['p'].shift(-1)\n",
+    "df.dropna(inplace=True)"
    ]
   },
   {
@@ -67,9 +107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/numpy/core/fromnumeric.py:2580: FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
+      "  return ptp(axis=axis, out=out, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "input_vars = ['p', \n",
     "                'e_hat', 'e_star', \n",
@@ -91,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +307,7 @@
        "max         0.402621     0.058177      0.058372    1.047816  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,9 +325,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -296,10 +345,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   131.6</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Mon, 21 Sep 2020</td> <th>  Prob (F-statistic):</th> <td>2.00e-108</td>\n",
+       "  <th>Date:</th>             <td>Mon, 28 Sep 2020</td> <th>  Prob (F-statistic):</th> <td>2.00e-108</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>13:15:00</td>     <th>  Log-Likelihood:    </th> <td>  2139.1</td> \n",
+       "  <th>Time:</th>                 <td>22:54:37</td>     <th>  Log-Likelihood:    </th> <td>  2139.1</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   651</td>      <th>  AIC:               </th> <td>  -4264.</td> \n",
@@ -354,9 +403,9 @@
        "  <th>Skew:</th>          <td>-0.373</td> <th>  Prob(JB):          </th> <td>1.43e-100</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Kurtosis:</th>      <td> 7.049</td> <th>  Cond. No.          </th> <td>4.10e+16</td> \n",
+       "  <th>Kurtosis:</th>      <td> 7.049</td> <th>  Cond. No.          </th> <td>8.89e+16</td> \n",
        "</tr>\n",
-       "</table><br/><br/>Notes:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The smallest eigenvalue is 9.19e-31. This might indicate that there are<br/>strong multicollinearity problems or that the design matrix is singular."
+       "</table><br/><br/>Notes:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The smallest eigenvalue is 1.96e-31. This might indicate that there are<br/>strong multicollinearity problems or that the design matrix is singular."
       ],
       "text/plain": [
        "<class 'statsmodels.iolib.summary.Summary'>\n",
@@ -366,8 +415,8 @@
        "Dep. Variable:                      y   R-squared:                       0.551\n",
        "Model:                            OLS   Adj. R-squared:                  0.547\n",
        "Method:                 Least Squares   F-statistic:                     131.6\n",
-       "Date:                Mon, 21 Sep 2020   Prob (F-statistic):          2.00e-108\n",
-       "Time:                        13:15:00   Log-Likelihood:                 2139.1\n",
+       "Date:                Mon, 28 Sep 2020   Prob (F-statistic):          2.00e-108\n",
+       "Time:                        22:54:37   Log-Likelihood:                 2139.1\n",
        "No. Observations:                 651   AIC:                            -4264.\n",
        "Df Residuals:                     644   BIC:                            -4233.\n",
        "Df Model:                           6                                         \n",
@@ -387,17 +436,17 @@
        "Omnibus:                       81.285   Durbin-Watson:                   2.029\n",
        "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              459.796\n",
        "Skew:                          -0.373   Prob(JB):                    1.43e-100\n",
-       "Kurtosis:                       7.049   Cond. No.                     4.10e+16\n",
+       "Kurtosis:                       7.049   Cond. No.                     8.89e+16\n",
        "==============================================================================\n",
        "\n",
        "Notes:\n",
        "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-       "[2] The smallest eigenvalue is 9.19e-31. This might indicate that there are\n",
+       "[2] The smallest eigenvalue is 1.96e-31. This might indicate that there are\n",
        "strong multicollinearity problems or that the design matrix is singular.\n",
        "\"\"\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,13 +474,6 @@
     "\n",
     "- Finally, the Durbin-Watson test of correlation between the residuals/error term shows a value close to 2, which suggests the autocorrelation is low enough to not correct."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -450,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
