move data folder

--- a/market_model/_market_model.ipynb
+++ b/market_model/_market_model.ipynb
@@ -230,7 +230,7 @@
     "import pandas as pd\n",
     "\n",
     "# read Bloxy data on ETH locked in Maker, rename columns to match our equations\n",
-    "bloxy_eth_df = pd.read_csv('../data/raw_files/dai_weth.csv')\n",
+    "bloxy_eth_df = pd.read_csv('data/raw_files/dai_weth.csv')\n",
     "bloxy_eth_df.set_index(pd.to_datetime(bloxy_eth_df['__timestamp']).dt.date, \n",
     "                    verify_integrity=True,\n",
     "                    inplace=True,\n",
@@ -243,7 +243,7 @@
     "bloxy_eth_df.drop(columns=original_columns, inplace=True)\n",
     "\n",
     "# read Bloxy data on SAI supply, rename columns to match our equations\n",
-    "bloxy_sai_df = pd.read_csv('../data/raw_files/dai_minted_burnt.csv')\n",
+    "bloxy_sai_df = pd.read_csv('data/raw_files/dai_minted_burnt.csv')\n",
     "bloxy_sai_df.set_index(pd.to_datetime(bloxy_sai_df['__timestamp']).dt.date, \n",
     "                    verify_integrity=True,\n",
     "                    inplace=True,\n",
@@ -255,7 +255,7 @@
     "bloxy_sai_df.drop(columns=original_columns, inplace=True)\n",
     "\n",
     "# read Dune query for CDPs wipes/shuts, rename columns to match our equations\n",
-    "dune_df = pd.read_json('../data/raw_files/dune_data.json')\n",
+    "dune_df = pd.read_json('data/raw_files/dune_data.json')\n",
     "dune_df.set_index(pd.to_datetime(dune_df['date_trunc']).dt.date, \n",
     "                          verify_integrity=True,\n",
     "                          inplace=True                          \n",
@@ -266,7 +266,7 @@
     "dune_df.drop(columns=original_columns, inplace=True)\n",
     "\n",
     "# read CSV provided by the client, rename columns to match our equations\n",
-    "reflexer_df = pd.read_csv('../data/raw_files/DAIETH_data.csv', usecols=['date','ETH Price', 'Stability Fee', 'DAI Price'])\n",
+    "reflexer_df = pd.read_csv('data/raw_files/DAIETH_data.csv', usecols=['date','ETH Price', 'Stability Fee', 'DAI Price'])\n",
     "reflexer_df.set_index(pd.to_datetime(reflexer_df['date']).dt.date, \n",
     "                    verify_integrity=True,\n",
     "                    inplace=True,\n",
