move debt market csv

--- a/market_model/_market_model.ipynb
+++ b/market_model/_market_model.ipynb
@@ -421,7 +421,7 @@
     "from IPython.display import HTML, display\n",
     "import tabulate\n",
     "\n",
-    "debt_market_df = pd.read_csv('debt_market_df.csv', index_col='date', parse_dates=True)\n",
+    "debt_market_df = pd.read_csv('data/debt_market_df.csv', index_col='date', parse_dates=True)\n",
     "\n",
     "# Load debt price model\n",
     "import pickle\n",
