--- a/market_model/appendix_i_debt_price_heuristics.ipynb
+++ b/market_model/appendix_i_debt_price_heuristics.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "debt_market_df = pd.read_csv('debt_market_df.csv')"
+    "debt_market_df = pd.read_csv('data/debt_market_df.csv')"
    ]
   },
   {
@@ -52,7 +52,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11970ea50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11030c890>"
       ]
      },
      "execution_count": 2,
@@ -110,7 +110,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x119c24b50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x110bb6910>"
       ]
      },
      "execution_count": 3,
@@ -169,7 +169,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x119b81a50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x110b11610>"
       ]
      },
      "execution_count": 4,
@@ -229,7 +229,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x119c44450>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x110670350>"
       ]
      },
      "execution_count": 5,
@@ -287,7 +287,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11885fbd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x110670310>"
       ]
      },
      "execution_count": 6,
@@ -331,7 +331,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x118b9b1d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x10fb32490>"
       ]
      },
      "execution_count": 7,
