--- a/market_model/appendix_ii_debt_price_ML.ipynb
+++ b/market_model/appendix_ii_debt_price_ML.ipynb
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "# load dataset\n",
-    "debt_market_df = pd.read_csv('debt_market_df.csv', index_col='date', parse_dates=True)\n",
+    "debt_market_df = pd.read_csv('data/debt_market_df.csv', index_col='date', parse_dates=True)\n",
     "\n",
     "\n",
     "def fitmodel(data_to_fit=debt_market_df, \n",
