--- a/market_model/appendix_iii_market_price_regression.ipynb
+++ b/market_model/appendix_iii_market_price_regression.ipynb
@@ -34,7 +34,7 @@
     }
    ],
    "source": [
-    "debt_market_df = pd.read_csv('debt_market_df.csv', index_col='date', parse_dates=True)\n",
+    "debt_market_df = pd.read_csv('data/debt_market_df.csv', index_col='date', parse_dates=True)\n",
     "\n",
     "# Load debt price model\n",
     "import pickle\n",
@@ -348,7 +348,7 @@
        "  <th>Date:</th>             <td>Mon, 28 Sep 2020</td> <th>  Prob (F-statistic):</th> <td>2.00e-108</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>22:54:37</td>     <th>  Log-Likelihood:    </th> <td>  2139.1</td> \n",
+       "  <th>Time:</th>                 <td>23:42:43</td>     <th>  Log-Likelihood:    </th> <td>  2139.1</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   651</td>      <th>  AIC:               </th> <td>  -4264.</td> \n",
@@ -416,7 +416,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.547\n",
        "Method:                 Least Squares   F-statistic:                     131.6\n",
        "Date:                Mon, 28 Sep 2020   Prob (F-statistic):          2.00e-108\n",
-       "Time:                        22:54:37   Log-Likelihood:                 2139.1\n",
+       "Time:                        23:42:43   Log-Likelihood:                 2139.1\n",
        "No. Observations:                 651   AIC:                            -4264.\n",
        "Df Residuals:                     644   BIC:                            -4233.\n",
        "Df Model:                           6                                         \n",
