--- a/market_model/_market_model.ipynb
+++ b/market_model/_market_model.ipynb
@@ -339,7 +339,7 @@
     "    return a\n",
     "debt_market_df['p_ema_10'] = pd.Series(ExpMovingAverage(debt_market_df['p'], 10), index=debt_market_df.index)\n",
     "\n",
-    "debt_market_df.to_csv('debt_market_df.csv')"
+    "debt_market_df.to_csv('data/debt_market_df.csv')"
    ]
   },
   {
