adding more text after Z's feedback

--- a/market_model/appendix_i_debt_price_heuristics.ipynb
+++ b/market_model/appendix_i_debt_price_heuristics.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Appendix - Exploring Debt Price Heuristics\n",
+    "# Appendix I - Exploring Debt Price Heuristics\n",
     "In this document we explore a few alternatives for modelling debt price as a function of the debt market activity. In all cases we assume the existence of a value function at the system level as a function of the total assets and liabilities in the system. We further assume this value to be an invariant. We explore different possible constructs for this value function, all of which take into account the notion of \"debt price\": a sort of \"intrinsic value\" of SAI derived from the activity in the debt system.\n",
     "\n",
     "Define:\n",
@@ -15,7 +15,9 @@
     "* $\\hat{p}_0 = p^*_0$  \n",
     "* $V_t=V_0 \\forall t$   \n",
     "    * $\\implies V(\\mathcal{X}_t,\\hat{p}_t)=V_0$\n",
-    "    * which we can then solve for $\\hat{p}_t$"
+    "    * which we can then solve for $\\hat{p}_t$\n",
+    "    \n",
+    "It's important to acknowledge that the choice of $V(\\mathcal{X},\\hat{p})$ is subjective: the different options essentially value the assets and the liabilities in the system from different perspectives. If a simple heuristic can reasonably explain the process, it is preferable to a black box model as it is more interpretable. Ultimately, no simple heuristic could be found through this process that yielded a reasonable trajectory for the debt price over the months in the scope of this analysis - which one would expect to hover around 1.00 USD like the market price did. For this reason, we turned to machine learning methods for estimating the debt price. The process is documented in [Appendix II](appendix_ii_debt_price_ML.ipynb)."
    ]
   },
   {
