--- a/market_model/appendix_ii_debt_price_ML.ipynb
+++ b/market_model/appendix_ii_debt_price_ML.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "For efficiency, we use the [AutoSklearn](http://papers.nips.cc/paper/5872-efficient-and-robust-automated-machine-learning.pdf) package to train the regressor. AutoSklearn is an automated machine learning system based on scikit-learn which leverages Bayesian optimization, meta-learning and ensemble construction to automatically select a combination of ML algorithms and tune their hyperparameters. A more traditional approach could be explored in future iterations of this project to increase transparency and control over the model.\n",
     "\n",
-    "Other iterations of this approach can be found in previous commits of this notebook. In them we explored:\n",
+    "Other iterations of this approach can be found in [previous commits](https://github.com/BlockScience/reflexer/blob/9ee1b81ddb81848911a1249bd2ebaddcebb6a0d8/data/debt_price_ml_methods.ipynb) of this notebook. In them we explored:\n",
     "* defining the debt price as equal to the market price instead of its 10-days EMA\n",
     "* different test sample sizes\n",
     "* holdout and cross validation as resampling strategies\n",
