comments about debt market

--- a/notebooks/backtesting.ipynb
+++ b/notebooks/backtesting.ipynb
@@ -102,8 +102,8 @@
       "text/plain": [
        "Index(['timedelta', 'cumulative_time', 'blockheight', 'eth_collateral',\n",
        "       'eth_locked', 'eth_freed', 'eth_bitten', 'principal_debt', 'rai_drawn',\n",
-       "       'rai_wiped', 'rai_bitten', 'accrued_interest', 'interest_bitten', 'w_1',\n",
-       "       'w_2', 'w_3', 'system_revenue', 'stability_fee', 'market_price_twap',\n",
+       "       'rai_wiped', 'rai_bitten', 'accrued_interest', 'interest_bitten', 'drip_in_rai',\n",
+       "       'wipe_in_rai', 'bite_in_rai', 'system_revenue', 'stability_fee', 'market_price_twap',\n",
        "       'redemption_price', 'redemption_rate', 'error_star',\n",
        "       'error_star_integral', 'market_slippage', 'RAI_balance', 'ETH_balance',\n",
        "       'simulation', 'subset', 'run', 'timestep'],\n",
